--- a/app/views/orders/_order.html.erb
+++ b/app/views/orders/_order.html.erb
@@ -23,8 +23,8 @@
   <div id="order-card">
     <div id="order-details">
       <div>
-        <strong>Product:</strong>
-        <%= order.product_id %>
+        <strong>Order:</strong>
+        <%= order.name %>
       </div>
 
       <div>
@@ -33,7 +33,7 @@
       </div>
 
       <div>
-        <strong>Cost:</strong>
+        <strong>Cost Credits:</strong>
         <%= order.cost %>
       </div>
     </div>
