feat: Update project form styles and add file input controller

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
   --accent1: #d08159;
   --accent2: #ffaa5e;
   --accent3: #ffd4a3;
-  --bg: #ffecd6;
+  --bg: #ffe4c6;
 }
 
 /* Base retro body */
